--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <title>Angularjs</title>
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="app.js"></script>
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
 </head>
 <body ng-app="myModule">
-<div ng-controller="myController">
+<div class="" ng-controller="myController">
     {{value}}
 </div>
-<button class="btn btn-primary">Button</button>
+<a ui-sref="test({vietnam:'lao'})">test</a>
+
+<div ui-view>
+   
+</div>
 </body>
 </html>
